# oee-tracker

./: .gitignore  README.md  compose.yml  pyproject.toml
migrations/versions/: 2f1f2d0293ca_create_shifs_table.py  37afb0104629_create_reason_codes_table.py  3dafd82ec639_create_production_runs_table.py  8942418f4c10_create_operators_table.py  b08e271247b6_create_downtime_events_table.py  d571592ac2c9_create_shifts_table.py  e994631454cb_create_machines_table.py
oee_tracker/: __init__.py  cli.py  crud.py  db.py  models.py
oee_tracker/cli/: __init__.py  downtime.py  machine.py  operator.py  report.py  run.py  shift.py
sample/: __init__.py  load.py
sample/data/: downtime_events.csv  machines.csv  operators.csv  production_runs.csv  reason_codes.csv  shifts.csv
